--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,3 +1,5 @@
 <h1>About Page</h1>
 <p>Description of the Task Manager</p>
 <p>Created by <%=@created_by%></p>
+<p>Id: <%=@id%></p>
+<p>Page: <%=@page%></p>
