--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,6 +3,8 @@
 
 <%# <a href="/tasks/index">Tasks 1</a> <br /> %>
 
-<%= link_to('Tasks', {controller: 'tasks', action: 'index', page: 1}) %><br />
+<%= link_to('Categories', categories_path) %><br />
+
+<%= link_to('Tasks', 'Tasks', tasks_path(page: 1)) %><br />
 
 <%= link_to('About', {action: 'about', page: 5, id: 20}) %> <br />
