--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,6 +5,6 @@
 
 <%= link_to('Categories', categories_path) %><br />
 
-<%= link_to('Tasks', 'Tasks', tasks_path(page: 1)) %><br />
+<%= link_to('Tasks', tasks_path(page: 1)) %><br />
 
 <%= link_to('About', {action: 'about', page: 5, id: 20}) %> <br />
