--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,3 +3,6 @@
 
 <h2>Description</h2>
 <p><%= @task.description %></p>
+
+<%= link_to('Edit', edit_task_path(@task)) %>
+<%= link_to('Delete', task_delete_path(@task)) %>
