--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Tasks#new</h1>
-<p>Find me in app/views/tasks/new.html.erb</p>
+<%= link_to('Home', root_path)%> - <%=link_to('Tasks', tasks_path)%>
+
+<h2>Create Task</h2>
+
+<%= form_for(@task) do |f| %>
+
+  <table summary="Tasks form fields">
+    <tr>
+      <th>Name</th>
+      <td><%= f.text_field(:name) %></td>
+    </tr>
+    <tr>
+      <th>Position</th>
+      <td><%= f.text_field(:position) %></td>
+    </tr>
+    <tr>
+      <th>Completed</th>
+      <td><%= f.check_box(:completed) %></td>
+    </tr>
+    <tr>
+      <th>Description</th>
+      <td><%= f.text_area(:description) %></td>
+    </tr>
+  </table>
+    <%= f.submit("Create Task") %>
+<% end %>
