--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -3,25 +3,7 @@
 <h2>Edit Task</h2>
 
 <%= form_for(@task) do |f| %>
-
-  <table summary="Tasks form fields">
-    <tr>
-      <th>Name</th>
-      <td><%= f.text_field(:name) %></td>
-    </tr>
-    <tr>
-      <th>Position</th>
-      <td><%= f.text_field(:position) %></td>
-    </tr>
-    <tr>
-      <th>Completed</th>
-      <td><%= f.check_box(:completed) %></td>
-    </tr>
-    <tr>
-      <th>Description</th>
-      <td><%= f.text_area(:description) %></td>
-    </tr>
-  </table>
-    <%= f.submit("Edit Task") %>
+  <%= render(partial: 'form', locals: {f: f}) %>
+  <%= f.submit("Edit Task") %>
 <% end %>
 
